src/objects/Term__c.object
<CustomObject>
    <description>Commercial Terms for re-contracting</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>Commercial Term Description</description>
        <inlineHelpText>Commercial Term Description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>Date the commercial term expires. Leave blank to keep the term open indefinitely.</description>
        <inlineHelpText>Date the commercial term expires. Leave blank to keep the term open indefinitely.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Max_Value__c</fullName>
        <description>Maximum value used to trigger approval process</description>
        <inlineHelpText>Maximum value used to trigger approval process</inlineHelpText>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Min_Value__c</fullName>
        <description>Minimum value used to trigger approval process</description>
        <inlineHelpText>Minimum value used to trigger approval process</inlineHelpText>
        <label>Min Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link related terms and determine whether child terms should be required.</description>
        <inlineHelpText>Used to link related terms and determine whether child terms should be required.</inlineHelpText>
        <label>Parent Term</label>
        <referenceTo>Term__c</referenceTo>
        <relationshipLabel>Related Terms</relationshipLabel>
        <relationshipName>Terms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the term is required</description>
        <inlineHelpText>Indicates whether the term is required</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <description>Order in which the terms are displayed in the wizard</description>
        <inlineHelpText>Order in which the terms are displayed in the wizard</inlineHelpText>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <description>Date that the commercial term is active</description>
        <inlineHelpText>Date that the commercial term is active</inlineHelpText>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>When_To_Display__c</fullName>
        <description>Determines if the term should be displayed based on the value selected for the parent term.</description>
        <inlineHelpText>Determines if the term should be displayed based on the value selected for the parent term.</inlineHelpText>
        <label>When To Display</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Term</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Start_Date__c</columns>
        <columns>Description__c</columns>
        <columns>End_Date__c</columns>
        <columns>Parent_Term__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>